# cppCourse

task_5/: Makefile  README.md  main.cpp  serializer.h  test.h
task_6/: CMakeLists.txt  README.md  main.cpp
task_6/src/: CMakeLists.txt  format.cpp  format.h  myException.h
task_6/tests/: CMakeLists.txt  test.cpp
task_8/: .gitignore  CMakeLists.txt  README.md  cjson.cpp  setup.py  test.py
task_8/tests/: benchmark.py  generate_data.py  test_basic.py  test_dump_errors.py  test_errors.py  test_load_errors.py
